-cleaning unused and commented code -fixing license link in readme -fixing minor errors in engineBrowserContext -project version up to 0.0.2
